# crab

./: .gitignore  README.md  crabnames.txt
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/compile/: ast_visitor.rs  basic_value_type.rs  builtins.rs  codegen.rs  except.rs  fn_manager.rs  functiongen.rs  identified_value.rs  mod.rs  type_manager.rs  var_manager.rs
rust/src/compile/llvmgen/: basic_value_type.rs  builtins.rs  codegen.rs  crab_value_type.rs  fn_manager.rs  functiongen.rs  llvm_visitor.rs  mod.rs  struct_manager.rs  var_manager.rs  var_value.rs
rust/src/hermit/: mod.rs  project_configuration.rs
rust/src/ir/: builtins.rs  codegen.rs  mod.rs  visitor.rs
rust/src/mangle/: except.rs  mangler.rs  mod.rs
rust/src/parse/: except.rs  expected_names.rs  grammar.pest  grammar.pest.old  mangle.rs  mod.rs  parser.old  parser.rs  pest_helper.rs  string_parser.rs
rust/src/parse/ast/: assignment.rs  ast_node.rs  code_block.rs  crab_ast.rs  crab_interface.rs  crab_struct.rs  crab_struct_behavior.rs  crab_struct_field.rs  crab_struct_init.rs  crab_type.rs  do_while_stmt.rs  else_stmt.rs  expected_names.rs  expression.rs  expression_chain.rs  expression_chain_type.rs  fn_call.rs  fn_param.rs  func.rs  func_signature.rs  ident.rs  if_stmt.rs  loop_stmt.rs  mod.rs  named_expression.rs  named_fn_param.rs  operator.rs  primitive.rs  statement.rs  struct_field.rs  struct_field_init.rs  struct_ident.rs  (+4 more)
rust/src/quill/: except.rs  mod.rs  nib.rs  quill.rs  quill_types.rs  quill_value.rs
rust/src/util/: collection_functional.rs  expected_names.rs  mangle.rs  mod.rs
(+58 files in other folders)
