[package]
name = "crab"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
log = {version = "0.4.*", features = ["std"]}
simple_logger = "1.11.*"
clap = {version = "2.27.*", features = ["yaml"]}
anyhow = "1.0.*"
pest = "2.1.*"
pest_derive = "2.1.*"
erased-serde = "0.3.*"
serde = {version = "1.0.*", features = ["derive", "rc"]}
toml = "0.5.*"
glob = "0.3.*"
thiserror = "1.0.*"
serde_json = "1.0.*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
