[package]
name = "crab"
version = "0.2.1"
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
log = {version = "0.4.*", features = ["std"]}
simple_logger = "1.11.*"
structopt = "0.3.*"
anyhow = "1.0.*"
pest = "2.1.*"
pest_derive = "2.1.*"
serde = {version = "1.0.*", features = ["derive", "rc"]}
thiserror = "1.0.*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
glob = "0.2.*"
lazy_static = "1.4.*"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
